--- a/style.css
+++ b/style.css
@@ -2,4 +2,28 @@ body {
     text-align: center;
     background-color: #011F3F;
   }
+
+.container {
+    display: block;
+    width: 50%;
+    margin: auto; 
+}
+
+.green {
+    background-color: green;
+}
+  
+.red {
+    background-color: red;
+  }
+
+.yellow {
+    background-color: yellow;
+}
+  
+.blue {
+    background-color: blue;
+}
+  
+
   
