--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@ body {
     margin: auto; 
 }
 
+
+.btn {
+    margin: 25px;
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    border: 10px solid black;
+    border-radius: 20%;
+  }
+
 .green {
     background-color: green;
 }
