add style on title

--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@ body {
     background-color: #011F3F;
   }
 
+  #level-title{
+    font-family: 'Press Start 2P', cursive;
+    font-size: 3rem;
+    margin:  5%;
+    color: gold;
+  }
+
+
 .container {
     display: block;
     width: 50%;
